MDL-28151 resource: prevent cropping of large images
Conflicts:

	theme/base/style/core.css

--- a/theme/base/style/core.css
+++ b/theme/base/style/core.css
@@ -760,6 +760,8 @@ body.tag .managelink {padding: 5px;}
 
 /* Resourcelib mp3 player size: only width could be changed here, height hardcoded in JS */
 .resourcecontent .resourcemediaplugin_mp3 object {height:25px; width: 600px}
+/** Large resource images should avoid hidden overflow **/
+.resourceimage {max-width: 100%;}
 
 /*
 Fix for SubScript & SuperScript
